pkg/extension/workspace/example/runtime/configdir/testdata/workspace2/expected/getenvoy_extension_run/lds.tmpl.yaml
version_info: v0
type_url: type.googleapis.com/envoy.config.listener.v3.Listener
resources:
- "@type": type.googleapis.com/envoy.config.listener.v3.Listener
  name: xds_ingress
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 20000
  filter_chains:
    - filters:
        - name: envoy.filters.network.wasm
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.wasm.v3.Wasm
            config:
              configuration: '{"key2":"value2"}'
              name: mycompany.filters.http.custom_metrics
              root_id: mycompany.filters.http.custom_metrics
              vm_config:
                vm_id: mycompany.filters.http.custom_metrics
                runtime: envoy.wasm.runtime.v8
                code: {"local":{"filename":"/path/to/extension.wasm"}}
        - name: envoy.filters.network.tcp_proxy
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
            stat_prefix: ingress
            cluster: xds_mock_service
